src/test/ui/generator/issue-68112.stderr
error: generator cannot be sent between threads safely
  --> $DIR/issue-68112.rs:40:5
   |
LL |     require_send(send_gen);
   |     ^^^^^^^^^^^^ generator is not `Send`
   |
   = help: the trait `Sync` is not implemented for `RefCell<i32>`
note: generator is not `Send` as this value is used across a yield
  --> $DIR/issue-68112.rs:36:9
   |
LL |         let _non_send_gen = make_non_send_generator();
   |             ------------- has type `impl Generator<Return = Arc<RefCell<i32>>>` which is not `Send`
LL |
LL |         yield;
   |         ^^^^^ yield occurs here, with `_non_send_gen` maybe used later
...
LL |     };
   |     - `_non_send_gen` is later dropped here
note: required by a bound in `require_send`
  --> $DIR/issue-68112.rs:22:25
   |
LL | fn require_send(_: impl Send) {}
   |                         ^^^^ required by this bound in `require_send`

error[E0277]: `RefCell<i32>` cannot be shared between threads safely
  --> $DIR/issue-68112.rs:63:5
   |
LL |     require_send(send_gen);
   |     ^^^^^^^^^^^^ `RefCell<i32>` cannot be shared between threads safely
   |
   = help: the trait `Sync` is not implemented for `RefCell<i32>`
   = note: required for `Arc<RefCell<i32>>` to implement `Send`
note: required because it's used within this generator
  --> $DIR/issue-68112.rs:48:5
   |
LL |     || {
   |     ^^
note: required because it appears within the type `impl Generator<Return = Arc<RefCell<i32>>>`
  --> $DIR/issue-68112.rs:45:30
   |
LL | pub fn make_gen2<T>(t: T) -> impl Generator<Return = T> {
   |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required because it appears within the type `impl Generator<Return = Arc<RefCell<i32>>>`
  --> $DIR/issue-68112.rs:53:34
   |
LL | fn make_non_send_generator2() -> impl Generator<Return = Arc<RefCell<i32>>> {
   |                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: required because it captures the following types: `impl Generator<Return = Arc<RefCell<i32>>>`, `()`
note: required because it's used within this generator
  --> $DIR/issue-68112.rs:59:20
   |
LL |     let send_gen = || {
   |                    ^^
note: required by a bound in `require_send`
  --> $DIR/issue-68112.rs:22:25
   |
LL | fn require_send(_: impl Send) {}
   |                         ^^^^ required by this bound in `require_send`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
